--- a/config/stormpath_apikey.properties
+++ b/config/stormpath_apikey.properties
@@ -1,2 +1,4 @@
-  apiKey.id = '1GTP266RYID4QBWVN9HL07VD6',
-  apiKey.secret = 'sNzyD5+GmyWkH4UMJSyzASYVZ7QLqoOLb3Vmj1W5YdE'
+#  apiKey.id = '1GTP266RYID4QBWVN9HL07VD6',
+#  apiKey.secret = 'sNzyD5+GmyWkH4UMJSyzASYVZ7QLqoOLb3Vmj1W5YdE'
+ apiKey.id = 2MTKYM0I39BW9BBXILMX2QVK6
+ apiKey.secret = UYFfgqjEMOg2q49G8hHepfAOYey8igXojK4c9/ZsnKo
